--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "passport-local": "^1.0.0",
     "pdfkit": "^0.17.1",
     "redis": "^5.6.1",
+    "slugify": "^1.6.6",
     "zod": "^3.25.74"
   }
 }
