Added getMe route

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,39 @@ EXPRESS_SESSION_SECRET=express-session
 
 # Frontend URL
 FRONTEND_URL=http://localhost:3000
+
+# sslCommerz
+SSL_STORE_ID="progr687aafea5c3b1"
+SSL_STORE_PASS="progr687aafea5c3b1@ssl"
+SSL_PAYMENT_API="https://sandbox.sslcommerz.com/gwprocess/v3/api.php"
+SSL_VALIDATION_API="https://sandbox.sslcommerz.com/validator/api/validationserverAPI.php"
+SSL_IPN_URL="https://backend-ph-tour-management-system.vercel.app/api/v1/payment/validate-payment"
+
+# SSL Commerz BACKEND URLs
+SSL_SUCCESS_BACKEND_URL="https://backend-ph-tour-management-system.vercel.app/api/v1/payment/success"
+SSL_FAIL_BACKEND_URL="https://backend-ph-tour-management-system.vercel.app/api/v1/payment/fail"
+SSL_CANCEL_BACKEND_URL="https://backend-ph-tour-management-system.vercel.app/api/v1/payment/cancel"
+
+# SSL Commerz FRONTEND URLs
+SSL_SUCCESS_FRONTEND_URL="https://test-react-dusky-gamma.vercel.app/payment/success"
+SSL_FAIL_FRONTEND_URL="https://test-react-dusky-gamma.vercel.app/payment/fail"
+SSL_CANCEL_FRONTEND_URL="https://test-react-dusky-gamma.vercel.app/payment/cancel"
+
+# CLOUDINARY
+
+CLOUDINARY_CLOUD_NAME=dohnx0aek
+CLOUDINARY_API_KEY=343851344547467
+CLOUDINARY_API_SECRET=Bk_ePqs8v77hfAtxAetZYf3Ag9c
+
+# SMTP GMAIL
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USER=mentor.saminravi@gmail.com
+SMTP_PASS=jbfu ptuk rbam ixje
+SMTP_FROM=mentor.saminravi@gmail.com
+
+# redis
+REDIS_HOST=redis-11174.c11.us-east-1-3.ec2.redns.redis-cloud.com
+REDIS_PORT=11174
+REDIS_USERNAME=default
+REDIS_PASSWORD=MBHiwxYPM5WGEY4WHJGLEvbosGDtKQnF
