Some change in booking model

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PORT=5000
+PORT=9000
 DB_URL=mongodb+srv://digital_wallet_user:o0722bww7nfF1gKO@cluster0.x9muexx.mongodb.net/localGuideDB?retryWrites=true&w=majority&appName=Cluster0
 NODE_ENV=development
 
@@ -17,7 +17,7 @@ SUPER_ADMIN_PASSWORD=12345678
 # Google
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_CLIENT_ID=248515863928-3po5n77hk1fmb4ifglgm0qhit4bevd26.apps.googleusercontent.com
-GOOGLE_CALLBACK_URL=http://localhost:5000/api/v1/auth/google/callback
+GOOGLE_CALLBACK_URL=http://localhost:9000/api/v1/auth/google/callback
 
 # Express Session
 EXPRESS_SESSION_SECRET=express-session
@@ -26,21 +26,21 @@ EXPRESS_SESSION_SECRET=express-session
 FRONTEND_URL=http://localhost:3000
 
 # sslCommerz
-SSL_STORE_ID="progr687aafea5c3b1"
-SSL_STORE_PASS="progr687aafea5c3b1@ssl"
+SSL_STORE_ID="nativ693668684338e"
+SSL_STORE_PASS="nativ693668684338e@ssl"
 SSL_PAYMENT_API="https://sandbox.sslcommerz.com/gwprocess/v3/api.php"
 SSL_VALIDATION_API="https://sandbox.sslcommerz.com/validator/api/validationserverAPI.php"
-SSL_IPN_URL="https://backend-ph-tour-management-system.vercel.app/api/v1/payment/validate-payment"
+SSL_IPN_URL="http://localhost:9000/api/v1/payment/validate-payment"
 
 # SSL Commerz BACKEND URLs
-SSL_SUCCESS_BACKEND_URL="https://backend-ph-tour-management-system.vercel.app/api/v1/payment/success"
-SSL_FAIL_BACKEND_URL="https://backend-ph-tour-management-system.vercel.app/api/v1/payment/fail"
-SSL_CANCEL_BACKEND_URL="https://backend-ph-tour-management-system.vercel.app/api/v1/payment/cancel"
+SSL_SUCCESS_BACKEND_URL="http://localhost:9000/api/v1/payment/success"
+SSL_FAIL_BACKEND_URL="http://localhost:9000/api/v1/payment/fail"
+SSL_CANCEL_BACKEND_URL="http://localhost:9000/api/v1/payment/cancel"
 
 # SSL Commerz FRONTEND URLs
-SSL_SUCCESS_FRONTEND_URL="https://test-react-dusky-gamma.vercel.app/payment/success"
-SSL_FAIL_FRONTEND_URL="https://test-react-dusky-gamma.vercel.app/payment/fail"
-SSL_CANCEL_FRONTEND_URL="https://test-react-dusky-gamma.vercel.app/payment/cancel"
+SSL_SUCCESS_FRONTEND_URL="http://localhost:3000/payment/success"
+SSL_FAIL_FRONTEND_URL="http://localhost:3000/payment/fail"
+SSL_CANCEL_FRONTEND_URL="http://localhost:3000/payment/cancel"
 
 # CLOUDINARY
 
@@ -51,9 +51,9 @@ CLOUDINARY_API_SECRET=Bk_ePqs8v77hfAtxAetZYf3Ag9c
 # SMTP GMAIL
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
-SMTP_USER=mentor.saminravi@gmail.com
-SMTP_PASS=jbfu ptuk rbam ixje
-SMTP_FROM=mentor.saminravi@gmail.com
+SMTP_USER=sultan.usg25@gmail.com
+SMTP_PASS=ytua cvaw gwqt fobe
+SMTP_FROM=sultan.usg25@gmail.com
 
 # redis
 REDIS_HOST=redis-11174.c11.us-east-1-3.ec2.redns.redis-cloud.com
