Review show successfully

--- a/.env.example
+++ b/.env.example
@@ -51,12 +51,12 @@ CLOUDINARY_API_SECRET=Bk_ePqs8v77hfAtxAetZYf3Ag9c
 # SMTP GMAIL
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
-SMTP_USER=sultan.usg25@gmail.com
+SMTP_USER=sultan.usg24@gmail.com
 SMTP_PASS=ytua cvaw gwqt fobe
-SMTP_FROM=sultan.usg25@gmail.com
+SMTP_FROM=sultan.usg24@gmail.com
 
 # redis
-REDIS_HOST=redis-11174.c11.us-east-1-3.ec2.redns.redis-cloud.com
-REDIS_PORT=11174
+REDIS_HOST=redis-16289.c14.us-east-1-2.ec2.cloud.redislabs.com
+REDIS_PORT=16289
 REDIS_USERNAME=default
-REDIS_PASSWORD=MBHiwxYPM5WGEY4WHJGLEvbosGDtKQnF
+REDIS_PASSWORD=oGeFTUueXlw85xqj1tlm3ldBugxQfaru
