--- a/.env.example
+++ b/.env.example
@@ -1,62 +1,62 @@
-PORT=9000
-DB_URL=mongodb+srv://digital_wallet_user:o0722bww7nfF1gKO@cluster0.x9muexx.mongodb.net/localGuideDB?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
+DB_URL=mongodb+srv://<username>:<password>@cluster0.example.mongodb.net/nativeWaysDB?retryWrites=true&w=majority
 NODE_ENV=development
 
-# JWT
-JWT_ACCESS_SECRET=access_secret
+# JWT Authentication
+JWT_ACCESS_SECRET=your_super_secret_access_key_123
 JWT_ACCESS_EXPIRES=1d
-JWT_REFRESH_SECRET=refresh_secret
+JWT_REFRESH_SECRET=your_super_secret_refresh_key_456
 JWT_REFRESH_EXPIRES=30d
-# BCRYPT
-BCRYPT_SALT_ROUND=10
 
-# SUPER ADMIN
-SUPER_ADMIN_EMAIL=super@gmail.com
-SUPER_ADMIN_PASSWORD=12345678
+# BCRYPT Hashing
+BCRYPT_SALT_ROUND=12
 
-# Google
-GOOGLE_CLIENT_SECRET=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
-GOOGLE_CLIENT_ID=248515863928-3po5n77hk1fmb4ifglgm0qhit4bevd26.apps.googleusercontent.com
-GOOGLE_CALLBACK_URL=http://localhost:9000/api/v1/auth/google/callback
+# Super Admin Credentials
+SUPER_ADMIN_EMAIL=admin@nativeways.com
+SUPER_ADMIN_PASSWORD=strong_password_123
+
+# Google OAuth
+GOOGLE_CLIENT_ID=1234567890-abcdefghijklmnopqrstuvwxyz.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=GOCSPX-abcdefghijklmnopqrstuvwxyz123456
+GOOGLE_CALLBACK_URL=http://localhost:5000/api/v1/auth/google/callback
 
 # Express Session
-EXPRESS_SESSION_SECRET=express-session
+EXPRESS_SESSION_SECRET=your_session_secret_key
 
-# Frontend URL
+# Frontend URL (CORS)
 FRONTEND_URL=http://localhost:3000
 
-# sslCommerz
-SSL_STORE_ID="nativ693668684338e"
-SSL_STORE_PASS="nativ693668684338e@ssl"
-SSL_PAYMENT_API="https://sandbox.sslcommerz.com/gwprocess/v3/api.php"
-SSL_VALIDATION_API="https://sandbox.sslcommerz.com/validator/api/validationserverAPI.php"
-SSL_IPN_URL="http://localhost:9000/api/v1/payment/validate-payment"
+# SSLCommerz Payment Gateway (Sandbox Credentials)
+SSL_STORE_ID=testbox
+SSL_STORE_PASS=testbox@ssl
+SSL_PAYMENT_API=https://sandbox.sslcommerz.com/gwprocess/v3/api.php
+SSL_VALIDATION_API=https://sandbox.sslcommerz.com/validator/api/validationserverAPI.php
+SSL_IPN_URL=http://localhost:5000/api/v1/payment/validate-payment
 
-# SSL Commerz BACKEND URLs
-SSL_SUCCESS_BACKEND_URL="http://localhost:9000/api/v1/payment/success"
-SSL_FAIL_BACKEND_URL="http://localhost:9000/api/v1/payment/fail"
-SSL_CANCEL_BACKEND_URL="http://localhost:9000/api/v1/payment/cancel"
+# Payment Backend Redirect URLs
+SSL_SUCCESS_BACKEND_URL=http://localhost:5000/api/v1/payment/success
+SSL_FAIL_BACKEND_URL=http://localhost:5000/api/v1/payment/fail
+SSL_CANCEL_BACKEND_URL=http://localhost:5000/api/v1/payment/cancel
 
-# SSL Commerz FRONTEND URLs
-SSL_SUCCESS_FRONTEND_URL="http://localhost:3000/payment/success"
-SSL_FAIL_FRONTEND_URL="http://localhost:3000/payment/fail"
-SSL_CANCEL_FRONTEND_URL="http://localhost:3000/payment/cancel"
+# Payment Frontend Redirect URLs
+SSL_SUCCESS_FRONTEND_URL=http://localhost:3000/payment/success
+SSL_FAIL_FRONTEND_URL=http://localhost:3000/payment/fail
+SSL_CANCEL_FRONTEND_URL=http://localhost:3000/payment/cancel
 
-# CLOUDINARY
+# Cloudinary (Image Upload)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=123456789012345
+CLOUDINARY_API_SECRET=abcdefghijklmnopqrstuvwxyz123
 
-CLOUDINARY_CLOUD_NAME=dohnx0aek
-CLOUDINARY_API_KEY=343851344547467
-CLOUDINARY_API_SECRET=Bk_ePqs8v77hfAtxAetZYf3Ag9c
-
-# SMTP GMAIL
+# SMTP Email Service (Gmail)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
-SMTP_USER=sultan.usg24@gmail.com
-SMTP_PASS=ytua cvaw gwqt fobe
-SMTP_FROM=sultan.usg24@gmail.com
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=abcd efgh ijkl mnop
+SMTP_FROM=no-reply@nativeways.com
 
-# redis
-REDIS_HOST=redis-16289.c14.us-east-1-2.ec2.cloud.redislabs.com
-REDIS_PORT=16289
+# Redis Cache
+REDIS_HOST=redis-12345.c1.us-east-1-2.ec2.cloud.redislabs.com
+REDIS_PORT=6379
 REDIS_USERNAME=default
-REDIS_PASSWORD=oGeFTUueXlw85xqj1tlm3ldBugxQfaru
+REDIS_PASSWORD=your_redis_password_here
