--- a/.env.example
+++ b/.env.example
@@ -1,62 +1,61 @@
-PORT=5000
-DB_URL=mongodb+srv://<username>:<password>@cluster0.example.mongodb.net/nativeWaysDB?retryWrites=true&w=majority
+PORT=9000
+DB_URL=mongodb+srv://digital_wallet_user:o0722bww7nfF1gKO@cluster0.x9muexx.mongodb.net/localGuideDB?retryWrites=true&w=majority&appName=Cluster0
 NODE_ENV=development
 
-# JWT Authentication
-JWT_ACCESS_SECRET=your_super_secret_access_key_123
+# JWT
+JWT_ACCESS_SECRET=access_secret
 JWT_ACCESS_EXPIRES=1d
-JWT_REFRESH_SECRET=your_super_secret_refresh_key_456
+JWT_REFRESH_SECRET=refresh_secret
 JWT_REFRESH_EXPIRES=30d
+# BCRYPT
+BCRYPT_SALT_ROUND=10
 
-# BCRYPT Hashing
-BCRYPT_SALT_ROUND=12
+# SUPER ADMIN
+SUPER_ADMIN_EMAIL=super@gmail.com
+SUPER_ADMIN_PASSWORD=12345678
 
-# Super Admin Credentials
-SUPER_ADMIN_EMAIL=admin@nativeways.com
-SUPER_ADMIN_PASSWORD=strong_password_123
-
-# Google OAuth
-GOOGLE_CLIENT_ID=1234567890-abcdefghijklmnopqrstuvwxyz.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=GOCSPX-abcdefghijklmnopqrstuvwxyz123456
-GOOGLE_CALLBACK_URL=http://localhost:5000/api/v1/auth/google/callback
+# Google
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=595485490494-h174fvdt9rjha4ri07i0t8fbu4p3g37p.apps.googleusercontent.com
+GOOGLE_CALLBACK_URL=https://native-ways-api.onrender.com/api/v1/auth/google/callback
 
 # Express Session
-EXPRESS_SESSION_SECRET=your_session_secret_key
+EXPRESS_SESSION_SECRET=express-session
 
-# Frontend URL (CORS)
-FRONTEND_URL=http://localhost:3000
+# Frontend URL
+FRONTEND_URL=https://local-guide-client-fz9u.vercel.app
 
-# SSLCommerz Payment Gateway (Sandbox Credentials)
-SSL_STORE_ID=testbox
-SSL_STORE_PASS=testbox@ssl
-SSL_PAYMENT_API=https://sandbox.sslcommerz.com/gwprocess/v3/api.php
-SSL_VALIDATION_API=https://sandbox.sslcommerz.com/validator/api/validationserverAPI.php
-SSL_IPN_URL=http://localhost:5000/api/v1/payment/validate-payment
+# sslCommerz
+SSL_STORE_ID="nativ693668684338e"
+SSL_STORE_PASS="nativ693668684338e@ssl"
+SSL_PAYMENT_API="https://sandbox.sslcommerz.com/gwprocess/v3/api.php"
+SSL_VALIDATION_API="https://sandbox.sslcommerz.com/validator/api/validationserverAPI.php"
+SSL_IPN_URL="https://native-ways-api.onrender.com/api/v1/payment/validate-payment"
 
-# Payment Backend Redirect URLs
-SSL_SUCCESS_BACKEND_URL=http://localhost:5000/api/v1/payment/success
-SSL_FAIL_BACKEND_URL=http://localhost:5000/api/v1/payment/fail
-SSL_CANCEL_BACKEND_URL=http://localhost:5000/api/v1/payment/cancel
+# SSL Commerz BACKEND URLs
+SSL_SUCCESS_BACKEND_URL="https://native-ways-api.onrender.com/api/v1/payment/success"
+SSL_FAIL_BACKEND_URL="https://native-ways-api.onrender.com/api/v1/payment/fail"
+SSL_CANCEL_BACKEND_URL="https://native-ways-api.onrender.com/api/v1/payment/cancel"
 
-# Payment Frontend Redirect URLs
-SSL_SUCCESS_FRONTEND_URL=http://localhost:3000/payment/success
-SSL_FAIL_FRONTEND_URL=http://localhost:3000/payment/fail
-SSL_CANCEL_FRONTEND_URL=http://localhost:3000/payment/cancel
+# SSL Commerz FRONTEND URLs
+SSL_SUCCESS_FRONTEND_URL="https://local-guide-client-fz9u.vercel.app/payment/success"
+SSL_FAIL_FRONTEND_URL="https://local-guide-client-fz9u.vercel.app/payment/fail"
+SSL_CANCEL_FRONTEND_URL="https://local-guide-client-fz9u.vercel.app/payment/cancel"
 
-# Cloudinary (Image Upload)
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=123456789012345
-CLOUDINARY_API_SECRET=abcdefghijklmnopqrstuvwxyz123
+# CLOUDINARY
+CLOUDINARY_CLOUD_NAME=dohnx0aek
+CLOUDINARY_API_KEY=343851344547467
+CLOUDINARY_API_SECRET=Bk_ePqs8v77hfAtxAetZYf3Ag9c
 
-# SMTP Email Service (Gmail)
+# SMTP GMAIL
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
-SMTP_USER=your_email@gmail.com
-SMTP_PASS=abcd efgh ijkl mnop
-SMTP_FROM=no-reply@nativeways.com
+SMTP_USER=sultan.usg24@gmail.com
+SMTP_PASS=ytua cvaw gwqt fobe
+SMTP_FROM=sultan.usg24@gmail.com
 
-# Redis Cache
-REDIS_HOST=redis-12345.c1.us-east-1-2.ec2.cloud.redislabs.com
-REDIS_PORT=6379
+# redis
+REDIS_HOST=redis-16289.c14.us-east-1-2.ec2.cloud.redislabs.com
+REDIS_PORT=16289
 REDIS_USERNAME=default
-REDIS_PASSWORD=your_redis_password_here
+REDIS_PASSWORD=oGeFTUueXlw85xqj1tlm3ldBugxQfaru
